feat(process): Analyse text sentiment and tone
- CLI input only while in development

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,9 @@ typings/
 
 # next.js build output
 .next
+
+# compiled source, published to NPM, but not required in repository
+dist/
+
+# node cache for debug compiled source
+/.ts-node
