--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
   },
   "dependencies": {
     "@types/node": "^10.5.2",
-    "watson-developer-cloud": "^3.5.3"
+    "@types/yargs": "^11.1.0",
+    "watson-developer-cloud": "^3.5.3",
+    "yargs": "^12.0.1"
   },
   "devDependencies": {
     "dotenv": "^6.0.0",
     "ts-node": "^7.0.0",
-    "typescript": "^2.9.2",
-    "yargs": "^12.0.1"
+    "typescript": "^2.9.2"
   },
   "scripts": {
     "build": "tsc",
