--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
   },
   "dependencies": {
     "@types/node": "^10.5.2",
-    "@types/yargs": "^11.1.0",
-    "watson-developer-cloud": "^3.5.3",
-    "yargs": "^12.0.1"
+    "watson-developer-cloud": "^3.5.3"
   },
   "devDependencies": {
+    "@types/yargs": "^11.1.0",
+    "yargs": "^12.0.1",
     "dotenv": "^6.0.0",
     "ts-node": "^7.0.0",
     "typescript": "^2.9.2"
@@ -43,5 +43,8 @@
     "build": "tsc",
     "local": "ts-node src",
     "start": "node dist"
+  },
+  "peerDependencies": {
+    "bbot": "^0.0.0"
   }
 }
