--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bbot-understand-watson-tone",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "NLU adapter for analysing bBot message sentiment with IBM's Watson Tone Analyzer",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -34,10 +34,10 @@
   },
   "devDependencies": {
     "@types/yargs": "^11.1.0",
-    "yargs": "^12.0.1",
     "dotenv": "^6.0.0",
     "ts-node": "^7.0.0",
-    "typescript": "^2.9.2"
+    "typescript": "^2.9.2",
+    "yargs": "^12.0.1"
   },
   "scripts": {
     "build": "tsc",
