--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bbot-watson-tone-nlu",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "description": "NLU adapter for analysing bBot message sentiment with IBM's Watson Tone Analyzer",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -34,18 +34,19 @@
   },
   "devDependencies": {
     "@types/yargs": "^11.1.0",
-    "bbot": "^0.1.0",
+    "bbot": "^0.1.2",
     "dotenv": "^6.0.0",
+    "rimraf": "^2.6.2",
     "ts-node": "^7.0.0",
     "typescript": "^2.9.2",
     "yargs": "^12.0.1"
   },
+  "peerDependencies": {
+    "bbot": "^0.1.2"
+  },
   "scripts": {
-    "build": "tsc",
+    "build": "rimraf ./dist/* && tsc",
     "local": "ts-node src",
     "start": "node dist"
-  },
-  "peerDependencies": {
-    "bbot": "^0.1.0"
   }
 }
